--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="nav-logo"><img src="./assets/logo.png" alt=""></div>
                 <div class="nav-items">
                     <ul class="flst">
-                        <li><a href="#aboutUs">About US</a></li>
+                        <li><a href="#about">About US</a></li>
                         <li><a href="#services">Services</a></li>
                     </ul>
                 </div>
@@ -276,6 +276,12 @@
                             <input type="text" id="name" placeholder="Enter name..">
                             <input type="text" id="surname" placeholder="Enter surname..">
                             <input type="number" id="phone" placeholder="Enter phone number..">
+                            <select name="industry" id="industry">
+                                <option value="Customer service">Customer service</option>
+                                <option value="Delivery services">Delivery services</option>
+                                <option value="Digital marketing">Digital marketing</option>
+                                <option value="Web and app development">Web and app development</option>
+                            </select>
 
                             <button type="submit">Send data</button>
                         </form>
@@ -295,9 +301,9 @@
                     <div class="footer-logo"><img src="./assets/logo.png" alt="logo"></div>
                     <div class="footer-item">
                         <ul>
-                            <li><a href="">About us</a></li>
-                            <li><a href="">Services</a></li>
-                            <li><a href="">Web and app development</a></li>
+                            <li><a href="#about">About US</a></li>
+                            <li><a href="#services">Services</a></li>
+                            <li><a href="./web.html">Web and app development</a></li>
                             <li><a href="">Digital marketing</a></li>
                         </ul>
                     </div>
@@ -319,7 +325,7 @@
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/d17c83b3d5.js" crossorigin="anonymous"></script>
-
+    <script src="./app/app.js"></script>
 
 </body>
 
