--- a/web.html
+++ b/web.html
@@ -19,8 +19,8 @@
                 <div class="nav-logo"><a href="./index.html"><img src="./assets/logo.png" alt=""></a></div>
                 <div class="nav-items">
                     <ul class="flst">
-                        <li><a href="#aboutUs">About US</a></li>
-                        <li><a href="#services">Services</a></li>
+                        <li><a href="index.html#about">About US</a></li>
+                        <li><a href="index.html#services">Services</a></li>
                     </ul>
                 </div>
                 <div class="nav-call flst">
@@ -367,7 +367,7 @@
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/d17c83b3d5.js" crossorigin="anonymous"></script>
-
+    <script src="./app/app.js"></script>
 
 </body>
 
