--- a/index.html
+++ b/index.html
@@ -44,10 +44,17 @@
                         </svg>
                     </label>
                     <div class="sidebar-content">
+                        <div class="sidebar-logo">
+                            <img src="./assets/logo.png" alt="logo">
+                        </div>
                         <div class="sidebar-items">
                             <ul>
-                                <li><a href="">About us</a></li>
-                                <li><a href="">Services</a></li>
+                                <li><a href="./index.html#about">About us</a></li>
+                                <li><a href="./index.html#services">Services</a></li>
+                                <li><a href="./web.html">Web and app development</a></li>
+                                <li><a href="./digMark.html">Digital marketing</a></li>
+                                <li><a href="./customer.html">Customer service</a></li>
+                                <li><a href="./delivery.html">Delivery services</a></li>
                             </ul>
                         </div>
                     </div>
