--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                             <div class="service-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                                 do eiusmod tempor incididunt ut labore et dolore magna aliqua. </div>
                             <div class="service-box-link">
-                                <a href="" class="flst">
+                                <a href="./digMark.html" class="flst">
                                     <p>Learn More</p><i class="fa-solid fa-arrow-up"></i>
                                 </a>
                             </div>
@@ -167,7 +167,7 @@
                             <div class="service-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                                 do eiusmod tempor incididunt ut labore et dolore magna aliqua. </div>
                             <div class="service-box-link">
-                                <a href="" class="flst">
+                                <a href="./delivery.html" class="flst">
                                     <p>Learn More</p><i class="fa-solid fa-arrow-up"></i>
                                 </a>
                             </div>
@@ -183,7 +183,7 @@
                             <div class="service-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                                 do eiusmod tempor incididunt ut labore et dolore magna aliqua. </div>
                             <div class="service-box-link">
-                                <a href="" class="flst">
+                                <a href="./customer.html" class="flst">
                                     <p>Learn More</p><i class="fa-solid fa-arrow-up"></i>
                                 </a>
                             </div>
