--- a/web.html
+++ b/web.html
@@ -331,6 +331,12 @@
                             <input type="text" id="name" placeholder="Enter name..">
                             <input type="text" id="surname" placeholder="Enter surname..">
                             <input type="number" id="phone" placeholder="Enter phone number..">
+                            <select name="industry" id="industry">
+                                <option value="Customer service">Customer service</option>
+                                <option value="Delivery services">Delivery services</option>
+                                <option value="Digital marketing">Digital marketing</option>
+                                <option value="Web and app development">Web and app development</option>
+                            </select>
 
                             <button type="submit">Send data</button>
                         </form>
