--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         </div>
     </section>
 
-    <section id="formAll">
+    <!-- <section id="formAll">
         <div class="form">
             <div class="form-content sectionMargin flsb">
                 <div class="form-l">
@@ -299,7 +299,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <footer>
         <div class="footer">
