--- a/delivery.html
+++ b/delivery.html
@@ -319,7 +319,7 @@
         </div>
     </section>
 
-    <section id="formAll">
+    <!-- <section id="formAll">
         <div class="form">
             <div class="form-content sectionMargin flsb">
                 <div class="form-l">
@@ -347,7 +347,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <footer>
         <div class="footer">
