--- a/digMark.html
+++ b/digMark.html
@@ -74,7 +74,9 @@
                         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                         nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
                 </div>
-                <div class="inside-header-bottom" style="background: url('./assets/digmark.jpg');"></div>
+                <div class="inside-header-bottom"
+                    style="background: url('https://img.freepik.com/free-photo/social-media-marketing-concept-marketing-with-applications_23-2150063136.jpg?t=st=1711883716~exp=1711887316~hmac=ccb3692c5ce01b3e1fa96b8760d9e76c3634f1d1baab6e3767f008c33523296a&w=1060');">
+                </div>
             </div>
         </div>
     </header>
@@ -318,36 +320,6 @@
             </div>
         </div>
     </section>
-
-    <!-- <section id="formAll">
-        <div class="form">
-            <div class="form-content sectionMargin flsb">
-                <div class="form-l">
-                    <div class="form-title">Get free 1 hour online or in-office consultation</div>
-                    <div class="form-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua.</div>
-                    <div class="form-data">
-                        <form action="">
-                            <input type="text" id="name" placeholder="Enter name..">
-                            <input type="text" id="surname" placeholder="Enter surname..">
-                            <input type="number" id="phone" placeholder="Enter phone number..">
-                            <select name="industry" id="industry">
-                                <option value="Customer service">Customer service</option>
-                                <option value="Delivery services">Delivery services</option>
-                                <option value="Digital marketing">Digital marketing</option>
-                                <option value="Web and app development">Web and app development</option>
-                            </select>
-
-                            <button type="submit">Send data</button>
-                        </form>
-                    </div>
-                </div>
-                <div class="form-right">
-                    <img src="./assets/form.svg" alt="gift">
-                </div>
-            </div>
-        </div>
-    </section> -->
 
     <footer>
         <div class="footer">
