--- a/index.html
+++ b/index.html
@@ -107,8 +107,9 @@
                                 <use xlink:href="#image0_2_32"
                                     transform="matrix(0.000459756 0 0 0.000365764 -0.44158 0)" />
                             </pattern>
-                            <image id="image0_2_32" xlink:href='./assets/business-discussion.jpg' width="4096"
-                                height="2734">
+                            <image id="image0_2_32"
+                                xlink:href='https://uploads-ssl.webflow.com/5f4e51902ae31a965f772618/64110b25c7833b8b55d04564_How%20To%20Lead%20An%20Effective%20Business%20Discussion.jpg'
+                                width="4096" height="2734">
                         </defs>
                     </svg>
                 </div>
@@ -270,36 +271,6 @@
             </div>
         </div>
     </section>
-
-    <!-- <section id="formAll">
-        <div class="form">
-            <div class="form-content sectionMargin flsb">
-                <div class="form-l">
-                    <div class="form-title">Get free 1 hour online or in-office consultation</div>
-                    <div class="form-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua.</div>
-                    <div class="form-data">
-                        <form action="">
-                            <input type="text" id="name" placeholder="Enter name..">
-                            <input type="text" id="surname" placeholder="Enter surname..">
-                            <input type="number" id="phone" placeholder="Enter phone number..">
-                            <select name="industry" id="industry">
-                                <option value="Customer service">Customer service</option>
-                                <option value="Delivery services">Delivery services</option>
-                                <option value="Digital marketing">Digital marketing</option>
-                                <option value="Web and app development">Web and app development</option>
-                            </select>
-
-                            <button type="submit">Send data</button>
-                        </form>
-                    </div>
-                </div>
-                <div class="form-right">
-                    <img src="./assets/form.svg" alt="gift">
-                </div>
-            </div>
-        </div>
-    </section> -->
 
     <footer>
         <div class="footer">
