--- a/delivery.html
+++ b/delivery.html
@@ -74,7 +74,9 @@
                         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                         nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
                 </div>
-                <div class="inside-header-bottom" style="background: url('./assets/deliveryS.jpg');"></div>
+                <div class="inside-header-bottom"
+                    style="background: url('https://img.freepik.com/free-photo/delivery-man-yellow-jacket-opening-yellow-backpack-taking-bag-with-order_1268-16751.jpg?w=1060&t=st=1711884093~exp=1711884693~hmac=10d5256361117ade6aae44b29c6e9738c6cb720ea1ca05afecd393dde2229fda');">
+                </div>
             </div>
         </div>
     </header>
@@ -318,36 +320,6 @@
             </div>
         </div>
     </section>
-
-    <!-- <section id="formAll">
-        <div class="form">
-            <div class="form-content sectionMargin flsb">
-                <div class="form-l">
-                    <div class="form-title">Get free 1 hour online or in-office consultation</div>
-                    <div class="form-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua.</div>
-                    <div class="form-data">
-                        <form action="">
-                            <input type="text" id="name" placeholder="Enter name..">
-                            <input type="text" id="surname" placeholder="Enter surname..">
-                            <input type="number" id="phone" placeholder="Enter phone number..">
-                            <select name="industry" id="industry">
-                                <option value="Customer service">Customer service</option>
-                                <option value="Delivery services">Delivery services</option>
-                                <option value="Digital marketing">Digital marketing</option>
-                                <option value="Web and app development">Web and app development</option>
-                            </select>
-
-                            <button type="submit">Send data</button>
-                        </form>
-                    </div>
-                </div>
-                <div class="form-right">
-                    <img src="./assets/form.svg" alt="gift">
-                </div>
-            </div>
-        </div>
-    </section> -->
 
     <footer>
         <div class="footer">
