--- a/web.html
+++ b/web.html
@@ -69,10 +69,15 @@
         <div class="inside-header">
             <div class="inside-header-content sectionMargin">
                 <div class="inside-header-top flsb">
-                    <div class="inside-header-title">Web and app development</div>
-                    <div class="inside-header-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                    <div class="inside-header-title">
+                        <p>Web and app development</p>
+                    </div>
+                    <div class="inside-header-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        </p>
+                    </div>
                 </div>
                 <div class="inside-header-bottom"
                     style="background: url('https://img.freepik.com/free-photo/professional-programmer-working-late-dark-office_1098-18705.jpg?t=st=1711883907~exp=1711887507~hmac=e0dd85d072625c291e05e921f9d7a0e23983ebf3dbe7a26a6ac2f3536e544376&w=1060');">
@@ -88,17 +93,31 @@
                     <img src="./assets/app-development.png" alt="development">
                     <p>Web and app development</p>
                 </div>
-                <div class="price-title">Web and app development</div>
-                <div class="price-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. </div>
+                <div class="price-title">
+                    <p>Web and app development</p>
+                </div>
+                <div class="price-text">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua. </p>
+                </div>
 
                 <div class="price-box-group">
                     <div class="price-box">
-                        <div class="price-category">Basic</div>
-                        <div class="price-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit </div>
-                        <div class="price-value">$150</div>
-                        <div class="price-btn"><button>Get the free consultation</button></div>
-                        <div class="price-get">Everything you get with Basic:</div>
+                        <div class="price-category">
+                            <p>Basic</p>
+                        </div>
+                        <div class="price-description">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit </p>
+                        </div>
+                        <div class="price-value">
+                            <p>$150</p>
+                        </div>
+                        <div class="price-btn"><button>
+                                <p>Get the free consultation</p>
+                            </button></div>
+                        <div class="price-get">
+                            <p>Everything you get with Basic:</p>
+                        </div>
                         <div class="price-get-value">
                             <ul>
                                 <li><svg width="28" height="15" viewBox="0 0 28 15" fill="none"
@@ -110,7 +129,7 @@
                                             d="M14.3864 14.1372C13.9634 14.5765 13.2492 14.5381 12.8757 14.0562L6.09874 5.31173C5.64698 4.72882 6.06243 3.88123 6.79991 3.88123C7.05888 3.88123 7.30491 3.99439 7.47345 4.19101L13.1586 10.8237C13.5377 11.266 14.2131 11.2919 14.625 10.88L25.2407 0.264294C25.4099 0.0950947 25.6394 3.91006e-05 25.8787 3.91006e-05C26.6743 3.91006e-05 27.0804 0.954985 26.5286 1.52808L14.3864 14.1372Z"
                                             fill="black" />
                                     </svg>
-                                    Lorem ipsum dolor sit amet
+                                    <p> Lorem ipsum dolor sit amet</p>
                                 </li>
                                 <li><svg width="28" height="15" viewBox="0 0 28 15" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -121,7 +140,7 @@
                                             d="M14.3864 14.1372C13.9634 14.5765 13.2492 14.5381 12.8757 14.0562L6.09874 5.31173C5.64698 4.72882 6.06243 3.88123 6.79991 3.88123C7.05888 3.88123 7.30491 3.99439 7.47345 4.19101L13.1586 10.8237C13.5377 11.266 14.2131 11.2919 14.625 10.88L25.2407 0.264294C25.4099 0.0950947 25.6394 3.91006e-05 25.8787 3.91006e-05C26.6743 3.91006e-05 27.0804 0.954985 26.5286 1.52808L14.3864 14.1372Z"
                                             fill="black" />
                                     </svg>
-                                    Lorem ipsum dolor sit amet
+                                    <p>Lorem ipsum dolor sit amet</p>
                                 </li>
                                 <li><svg width="28" height="15" viewBox="0 0 28 15" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -132,7 +151,7 @@
                                             d="M14.3864 14.1372C13.9634 14.5765 13.2492 14.5381 12.8757 14.0562L6.09874 5.31173C5.64698 4.72882 6.06243 3.88123 6.79991 3.88123C7.05888 3.88123 7.30491 3.99439 7.47345 4.19101L13.1586 10.8237C13.5377 11.266 14.2131 11.2919 14.625 10.88L25.2407 0.264294C25.4099 0.0950947 25.6394 3.91006e-05 25.8787 3.91006e-05C26.6743 3.91006e-05 27.0804 0.954985 26.5286 1.52808L14.3864 14.1372Z"
                                             fill="black" />
                                     </svg>
-                                    Lorem ipsum dolor sit amet
+                                    <p>Lorem ipsum dolor sit amet</p>
                                 </li>
                                 <li><svg width="28" height="15" viewBox="0 0 28 15" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -143,17 +162,27 @@
                                             d="M14.3864 14.1372C13.9634 14.5765 13.2492 14.5381 12.8757 14.0562L6.09874 5.31173C5.64698 4.72882 6.06243 3.88123 6.79991 3.88123C7.05888 3.88123 7.30491 3.99439 7.47345 4.19101L13.1586 10.8237C13.5377 11.266 14.2131 11.2919 14.625 10.88L25.2407 0.264294C25.4099 0.0950947 25.6394 3.91006e-05 25.8787 3.91006e-05C26.6743 3.91006e-05 27.0804 0.954985 26.5286 1.52808L14.3864 14.1372Z"
                                             fill="black" />
                                     </svg>
-                                    Lorem ipsum dolor sit amet
+                                    <p>Lorem ipsum dolor sit amet</p>
                                 </li>
                             </ul>
                         </div>
                     </div>
                     <div class="price-box">
-                        <div class="price-category">Plus</div>
-                        <div class="price-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit </div>
-                        <div class="price-value">$350</div>
-                        <div class="price-btn"><button>Get the free consultation</button></div>
-                        <div class="price-get">Everything you get with Basic:</div>
+                        <div class="price-category">
+                            <p>Plus</p>
+                        </div>
+                        <div class="price-description">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit </p>
+                        </div>
+                        <div class="price-value">
+                            <p>$350</p>
+                        </div>
+                        <div class="price-btn"><button>
+                                <p>Get the free consultation</p>
+                            </button></div>
+                        <div class="price-get">
+                            <p>Everything you get with Basic:</p>
+                        </div>
                         <div class="price-get-value">
                             <ul>
                                 <li><svg width="28" height="15" viewBox="0 0 28 15" fill="none"
@@ -165,7 +194,7 @@
                                             d="M14.3864 14.1372C13.9634 14.5765 13.2492 14.5381 12.8757 14.0562L6.09874 5.31173C5.64698 4.72882 6.06243 3.88123 6.79991 3.88123C7.05888 3.88123 7.30491 3.99439 7.47345 4.19101L13.1586 10.8237C13.5377 11.266 14.2131 11.2919 14.625 10.88L25.2407 0.264294C25.4099 0.0950947 25.6394 3.91006e-05 25.8787 3.91006e-05C26.6743 3.91006e-05 27.0804 0.954985 26.5286 1.52808L14.3864 14.1372Z"
                                             fill="black" />
                                     </svg>
-                                    Lorem ipsum dolor sit amet
+                                    <p>Lorem ipsum dolor sit amet</p>
                                 </li>
                                 <li><svg width="28" height="15" viewBox="0 0 28 15" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -176,7 +205,7 @@
                                             d="M14.3864 14.1372C13.9634 14.5765 13.2492 14.5381 12.8757 14.0562L6.09874 5.31173C5.64698 4.72882 6.06243 3.88123 6.79991 3.88123C7.05888 3.88123 7.30491 3.99439 7.47345 4.19101L13.1586 10.8237C13.5377 11.266 14.2131 11.2919 14.625 10.88L25.2407 0.264294C25.4099 0.0950947 25.6394 3.91006e-05 25.8787 3.91006e-05C26.6743 3.91006e-05 27.0804 0.954985 26.5286 1.52808L14.3864 14.1372Z"
                                             fill="black" />
                                     </svg>
-                                    Lorem ipsum dolor sit amet
+                                    <p>Lorem ipsum dolor sit amet</p>
                                 </li>
                                 <li><svg width="28" height="15" viewBox="0 0 28 15" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -187,7 +216,7 @@
                                             d="M14.3864 14.1372C13.9634 14.5765 13.2492 14.5381 12.8757 14.0562L6.09874 5.31173C5.64698 4.72882 6.06243 3.88123 6.79991 3.88123C7.05888 3.88123 7.30491 3.99439 7.47345 4.19101L13.1586 10.8237C13.5377 11.266 14.2131 11.2919 14.625 10.88L25.2407 0.264294C25.4099 0.0950947 25.6394 3.91006e-05 25.8787 3.91006e-05C26.6743 3.91006e-05 27.0804 0.954985 26.5286 1.52808L14.3864 14.1372Z"
                                             fill="black" />
                                     </svg>
-                                    Lorem ipsum dolor sit amet
+                                    <p>Lorem ipsum dolor sit amet</p>
                                 </li>
                                 <li><svg width="28" height="15" viewBox="0 0 28 15" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -198,7 +227,7 @@
                                             d="M14.3864 14.1372C13.9634 14.5765 13.2492 14.5381 12.8757 14.0562L6.09874 5.31173C5.64698 4.72882 6.06243 3.88123 6.79991 3.88123C7.05888 3.88123 7.30491 3.99439 7.47345 4.19101L13.1586 10.8237C13.5377 11.266 14.2131 11.2919 14.625 10.88L25.2407 0.264294C25.4099 0.0950947 25.6394 3.91006e-05 25.8787 3.91006e-05C26.6743 3.91006e-05 27.0804 0.954985 26.5286 1.52808L14.3864 14.1372Z"
                                             fill="black" />
                                     </svg>
-                                    Lorem ipsum dolor sit amet
+                                    <p>Lorem ipsum dolor sit amet</p>
                                 </li>
                             </ul>
                         </div>
